[package]
name = "rust-postgres"
version = "0.1.0"
edition = "2021"
authors = ["Julian <julianjpit@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.2"
regex = "1.5.5"
mongodb = "2.2.2"
dotenv = "0.15.0"
#pango = "0.15.10"
[dependencies.magic-crypt]
version = "*"
default-features = false
